modified the spring application name since it is used to construct the url to read the properties from config server

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: UserManagement
+    name: userManagement
   config:
     import: optional:configserver:http://localhost:9050
   profiles:
